updated launch4j plugin to 2.0.1